first step in returning to spring data demo
Signed-off-by: Joost van der Griendt <joostvdg@gmail.com>